add first draft of fighter ingestion
